--- a/package.json
+++ b/package.json
@@ -8,24 +8,26 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:deploy": "prisma migrate deploy",
-    "prisma:studio": "prisma studio"
+    "prisma:migrate": "dotenv -e .env.development -- prisma migrate dev",
+    "prisma:deploy": "dotenv -e .env.development -- prisma migrate deploy",
+    "prisma:studio": "dotenv -e .env.development -- prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.19.0",
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^7.4.1",
     "better-auth": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "pg": "^8.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
-    "prisma": "^5.19.0",
+    "prisma": "^7.4.1",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   }
