--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "dotenv -e .env.development -- prisma migrate dev",
-    "prisma:deploy": "dotenv -e .env.development -- prisma migrate deploy",
-    "prisma:studio": "dotenv -e .env.development -- prisma studio"
+    "prisma:migrate": "dotenv -e .env.development -- npx prisma migrate dev",
+    "prisma:deploy": "dotenv -e .env.development -- npx prisma migrate deploy",
+    "prisma:studio": "dotenv -e .env.development -- npx prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
+    "dotenv-cli": "^7.4.2",
     "prisma": "^7.4.1",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
